feat: updated project landing

--- a/public/css/_core.scss
+++ b/public/css/_core.scss
@@ -65,6 +65,8 @@ body {
     &__detail {
         flex: 1;
         max-width: 165px;
+        display: flex;
+        justify-content: flex-end;
 
         @media (min-width: $tablet) {
             flex: 0 0 165px;
@@ -121,9 +123,11 @@ body {
     }
 }
 .searchbar {
-    display: inline-block;
+    // display: inline-block;
+    display: none;
     position: relative;
-    border: 2px solid $black;
+    border: 2px solid $green;
+    border-radius: 5px;
     
     @media (min-width: $tablet) {
         width: 400px;
@@ -171,6 +175,7 @@ body {
         }
     }
 
+    border-radius: 10px;
     background: $white;
     border: 1px solid #eeeeee;
     margin-bottom: 1rem;
@@ -269,19 +274,19 @@ body {
             color: $white;
             font-size: 1rem;
             padding: 0.75rem 0;
-            border-radius: 2px;
             text-decoration: none;
             text-align: center;
             flex: 1;
+            border-radius: 5px;
             
         }
         &__btn {
+            border-radius: 5px;
             text-transform: uppercase;
             background: $green;
             color: $white;
             font-size: 1rem;
             padding: 0.75rem 0;
-            border-radius: 2px;
             text-decoration: none;
             flex: 1;
             text-align: center;
@@ -306,4 +311,12 @@ body {
     padding: 1rem 0;
     margin-top: auto;
     color: $white;
+    .wrapper {
+        display: flex;
+        justify-content: space-between;
+    }
+    &__inner {
+        display: flex;
+        align-items: flex-end;
+    }
 }
