--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 $black:     #1c1c1c;
 $white:     #fff;
-$green:     #C1DB47;
+$green:     #eb33a4;
 $smoke:     #F8F8F8;
 
 // Media Queries
