feat: update lotrek logo and colors

--- a/public/css/_core.scss
+++ b/public/css/_core.scss
@@ -20,7 +20,7 @@ body {
     @include maxwidth;
 }
 .hero {
-    background: #1c1c1c;
+    background: #232323;
     border-bottom: 8px solid $green;
     position: relative;
     padding: 1rem 0;
