--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
-$black:     #1c1c1c;
+$black:     #232323;
 $white:     #fff;
-$green:     #eb33a4;
+$green:     #bdfc04;
 $smoke:     #F8F8F8;
 
 // Media Queries
